--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 logs
 project/project
 project/target/
+project/play-fork-run.sbt
+project/sbt-ui.sbt
 #target #commented for deploying to openshift
 tmp
 .history
